# IsaacGrimoire

./: .gitignore  CMakeLists.txt  IsaacGrimoire.pro  LICENSE  README.md  data.qrc
Core/: CheatSheet.cc  CheatSheet.h  Inquirer.cc  Inquirer.h  Item.cc  Item.h  Memory.cc  Memory.h  MemoryMach.cc  MemoryMach.h  MemoryWin32.cc  MemoryWin32.h  auth.cc  main.cc  util.h  version.h
Core/exception/: get_process_error.cc  get_process_error.h  get_task_error.cc  get_task_error.h  not_in_game.cc  not_in_game.h  read_memory_error.cc  read_memory_error.h
UI/: about.cpp  about.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui  qimagebox.cpp  qimagebox.h
auth/: CMakeLists.txt
auth/src/: CMakeLists.txt  auth.cc
hack/: CheatTable-Mac-x64.dot  CheatTable-Win-x64.dot
include/: CheatSheet.h  Inquirer.h  Item.h  Memory.h  MemoryMach.h  MemoryWin64.h  util.h
include/UIFltk/: GameButton.h  HUDPane.h  InfoPane.h  InquirerPanel.h  ItemImageBox.h  ItemPane.h  ItemTab.h  Layout.h  MenuCH.h  MenuEN.h  SheetWindow.h  StatTab.h
include/exception/: get_process_error.h  get_task_error.h  (+2 more)
resources/: Info.plist  cards.js  cards.json  collectibles.js  collectibles.json  pills.js  pills.json  pillspic.json  special.json  trinkets.js  trinkets.json
src/: CMakeLists.txt  CheatSheet.cc  Inquirer.cc  Item.cc  Memory.cc  MemoryMach.cc  MemoryWin64.cc  auth.cc  main.cc
src/UIFltk/: GameButton.cc  HUDPane.cc  InfoPane.cc  InquirerPanel.cc  ItemImageBox.cc  ItemPane.cc  ItemTab.cc  SheetWindow.cc  StatTab.cc  UI.dot  trans.sh
src/exception/: get_process_error.cc  get_task_error.cc  not_in_game.cc  read_memory_error.cc
translations/: grimoire_ch.ts  grimoire_en.ts
